fix: Update API URL and CORS configuration, add version display

--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
       "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "http://localhost:5173" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,POST,HEAD" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://deutsch-lernen-omega.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-Secret, Content-Type, Authorization, X-Requested-With" }
       ]
     }
@@ -17,5 +17,7 @@
     { "source": "/api/(.*)", "destination": "/api/$1" }
   ]
 }
+
+
 
 
