--- a/.gitignore
+++ b/.gitignore
@@ -15,23 +15,13 @@ dist-ssr
 # Environment variables
 .env
 .env.local
+.env.development
 .env.production
 .env*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
+# Vercel
 .vercel
 
 
-.env*.local
-.vercel
 
+.vercel
