--- a/.vercelignore
+++ b/.vercelignore
@@ -1,4 +1,45 @@
+.git
+node_modules
 src
 public
 index.html
 vite.config.ts
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!index.html
+!public
+!src
+!vite.config.ts
+!
+
+
+
+
